Skip to content
GitLab
Projects Groups Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Register
  • Sign in
  • Files Files
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 422
    • Issues 422
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 71
    • Merge requests 71
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Wiki
    • Wiki
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GNOMEGNOME
  • FilesFiles
  • Issues
  • #1443
Closed
Open
Issue created Apr 08, 2020 by David Auer@dreua

Batch-renaming to the reverse order causes freeze and high memory and cpu consumption

Affected version

  • Nightly flatpak: Yes, GNOME nautilus 3.37.1
  • Other: Fedora 31 / GNOME nautilus 3.34.2

Steps to reproduce

Warning: This will close all your nautilus windows first and eat up all your RAM later (rather slowly on my machine but anyways) - be ready to watch your RAM usage and kill nautilus.

  1. Run the attached script or create a new directory containing files test1 and test2 by hand.
  2. Select those (Ctrl + A) and open rename dialog (F2)
  3. Enter name "test" and add automatic numbering [1,2,3] from the "+Add" button. Select "Original Name (Descending)" for ordering.

Screenshot of rename settings

Current behavior

Nautilus freezes and starts eating your memory using 100% CPU on one thread. If you're lucky, oom killer might be there to save the day after a while. Files are not renamed.

Screenshot of System Monitor

Expected behavior

Either prevent renaming in this case and let the user handle this using two rename steps or - in best case - make the rename work as intended. This is actually a useful feature if you happen to have your files ordered the wrong way round.

Additional information

Nautilus notices and prevents a renaming conflict if the existing conflicting file is not part of the batch rename (i.e. you want to batch-rename files a and b to test1 and test2 but any of these is already there.)

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
Time tracking