src/nautilus-file-undo-operations.c
@@ -1200,13 +1200,6 @@ batch_rename_redo_func (NautilusFileUndoInfo           *info,
 
     files = g_list_reverse (files);
 
-    batch_rename_sort_lists_for_rename (&files,
-                                        &self->new_display_names,
-                                        &self->old_display_names,
-                                        &self->new_files,
-                                        &self->old_files,
-                                        TRUE);
-
     nautilus_file_batch_rename (files, self->new_display_names, file_undo_info_operation_callback, self);
 }
 
@@ -1232,13 +1225,6 @@ batch_rename_undo_func (NautilusFileUndoInfo           *info,
     }
 
     files = g_list_reverse (files);
-
-    batch_rename_sort_lists_for_rename (&files,
-                                        &self->old_display_names,
-                                        &self->new_display_names,
-                                        &self->old_files,
-                                        &self->new_files,
-                                        TRUE);
 
     nautilus_file_batch_rename (files, self->old_display_names, file_undo_info_operation_callback, self);
 }
